add trees tab with robert's and alice's tree

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 					<div class="topbar-entry-link"><a href="/home/index.html" target="the_frame">Home</a></div>
 					<div class="topbar-entry-link"><a href="/genealogy-puzzles/index.html" target="the_frame">Genealogy Puzzles</a></div>
 					<div class="topbar-entry-link"><a href="/narratives/index.html" target="the_frame">Narratives</a></div>
+					<div class="topbar-entry-link"><a href="/trees/index.html" target="the_frame">Trees</a></div>
 					<div class="topbar-entry-link"><a href="/poppett-gallery/index.html" target="the_frame">Poppett Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/case-gallery/index.html" target="the_frame">Case Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/fan/index.html" target="the_frame">Friends, Associates, Neighbors</a></div>
