re-add titles to trees

--- a/trees/index.html
+++ b/trees/index.html
@@ -65,6 +65,7 @@ function showDiv(ev,type,inst,key){
 
 <body>
 	<center>
+		<h3>Robert Albert Poppett</h3>
 		<div id="robert">
 
 			<div class="tp-svg" id="S_Test">
@@ -675,6 +676,7 @@ circle.fam {
 
 		</div>
 
+		<h3>Alice Addelaide Case</h3>
 		<div id="alice">
 
 			<div class="tp-svg" id="S_Test">
