--- a/index.html
+++ b/index.html
@@ -25,34 +25,64 @@
 				<div class="sidebar-title"><b>Mormon History Resources</b></div>
 				<div class="sidebar-section" id="places">
 					<div class="sidebar-entry-title"><b>Places</b></div>
-					<div class="sidebar-entry-link">Early Church (1831-1839)</div>
-					<div class="sidebar-entry-link">Nauvoo</div>
 					<div class="sidebar-dropdown">
-						<div class="sidebar-entry-link">British Mission</div>
+						<div class="sidebar-entry-link">Early Church</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">Missionaries</div>
-							<div class="sidebar-entry-link">Conferences</div>
-							<div class="sidebar-entry-link">Liverpool to New Orleans</div>
+							<div class="sidebar-entry-link">New York</div>
+							<div class="sidebar-entry-link">Ohio and Missouri</div>
+							<div class="sidebar-entry-link">Nauvoo and Death of Joseph Smith</div>
 						</div>
 					</div>
-					<div class="sidebar-entry-link">Staging Areas in Nebraska and Iowa</div>
-					<div class="sidebar-entry-link">Mormon Battalion</div>
-					<div class="sidebar-entry-link">Trek to Utah</div>
-					<div class="sidebar-entry-link">Utah Zion</div>
-					<div class="sidebar-entry-link">Mormons in California Gold Fields </div>
-					<div class="sidebar-entry-link">Desert Trail from Utah to San Bernardino</div>
+					<div class="sidebar-dropdown">
+						<div class="sidebar-entry-link">Britain</div>
+						<div class="sidebar-dropdown-content">
+							<div class="sidebar-dropdown">
+							<div class="sidebar-entry-link">British Mission</div>
+								<div class="sidebar-dropdown-content">
+									<div class="sidebar-entry-link">Branches and Missionaries</div>
+									<div class="sidebar-entry-link">Liverpool to New Orleans</div>
+								</div>
+							</div>
+							<div class="sidebar-entry-link">Shropshire</div>
+							<div class="sidebar-entry-link">Coal Mining</div>
+						</div>
+					</div>
+					<div class="sidebar-dropdown">
+						<div class="sidebar-entry-link">Exodus from USA</div>
+						<div class="sidebar-dropdown-content">
+							<div class="sidebar-entry-link">Staging Areas</div>
+							<div class="sidebar-entry-link">Mormon Battalion</div>
+							<div class="sidebar-entry-link">Trek to Utah Territory</div>
+						</div>
+					</div>
+					<div class="sidebar-dropdown">
+						<div class="sidebar-entry-link">Utah Territory</div>
+						<div class="sidebar-dropdown-content">
+							<div class="sidebar-entry-link">Utah Valley</div>
+							<div class="sidebar-entry-link">Mountain Meadow Massacre</div>
+						</div>
+					</div>
+					<div class="sidebar-entry-link">California Gold Fields</div>
+					<div class="sidebar-entry-link">Desert Trail to San Bernardino</div>
 					<div class="sidebar-dropdown">
 						<div class="sidebar-entry-link">San Bernardino Colony</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">Overview and Links</div>
-							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/fort-1851-1854/index.html" target="the_frame">Fort 1851-1854</a></div>
+							<div class="sidebar-entry-link">
+								<a href="/resources/places/san-bernardino-colony/overview/index.html" target="the_frame">Overview</a>
+							</div>
 							<div class="sidebar-entry-link">1853 Survey</div>
-							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/freighting/index.html" target="the_frame">Freighting</a></div>
-							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/pioneer-lists/index.html" target="the_frame">Pioneer Lists</a></div>
+							<div class="sidebar-entry-link">
+								<a href="/resources/places/san-bernardino-colony/fort-1851-1854/index.html" target="the_frame">Fort 1851-1854</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/resources/places/san-bernardino-colony/freighting/index.html" target="the_frame">Freighting</a>
+							</div>
+							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/pioneers/index.html" target="the_frame">Pioneers</a></div>
+							<div class="sidebar-entry-link">Recall</div>
 						</div>
 					</div>
 				</div>
-				<div class="sidebar-entry-link"><a href="/resources/timelines/index.html" target="the_frame">Timelines</a></div>
+				<div class="sidebar-entry-link"><a href="/resources/timeline/index.html" target="the_frame">Timeline</a></div>
 				<div class="sidebar-section" id="bulletin-board">
 					<div class="sidebar-entry-title"><b>Lists</b></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/rlds-san-bernadino-1867-branch-pages-18-23.pdf" target="_blank">RLDS San Bernadino Branch List (1867)</a></div>
