add two sb colony pages

--- a/resources/places/san-bernardino-colony/fort-1851-1854/index.html
+++ b/resources/places/san-bernardino-colony/fort-1851-1854/index.html
@@ -8,6 +8,8 @@
   <style type="text/css">code{white-space: pre;}</style>
 </head>
 <body>
+<h2 id="fort-san-bernardino-1851-1854">Fort San Bernardino, 1851-1854</h2>
+<p><a href="https://www.ci.san-bernardino.ca.us/about/history/fort_san_bernardino.asp">For San Bernardino</a> – When the Mormons arrived in 1851, there was wide spread fear of a general uprising among the Utes, Chemehuevis, and other desert Indians. The Mormons decided to build a fort similar to a stockade built in Salt Lake on the arrival of Mormons at that point.</p>
 <p><strong>Links</strong></p>
 <p><a href="http://search.ancestry.com/search/db.aspx?dbid=1767">California State Census, 1852</a> – California’s 1852 State Census, taken when many San Bernardino residents still lived in the fort, is available at Anestry.com. The city of San Bernardino was part of Los Angeles County in 1852. San Bernardino County was created in 1853.</p>
 <p><img src="media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\San Bernardino, California 1852.jpg" width="624" height="273" /></p>
