--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="topbar-entry-link"><a href="/fan/index.html" target="the_frame">Friends, Associates, Neighbors</a></div>
 					<div class="topbar-entry-link"><a href="/about/index.html" target="the_frame">About</a></div>
 				</div>
-				<iframe name="the_frame" id="the_frame" src="/home">
+				<iframe name="the_frame" id="the_frame" src="/home/index.html">
 				</iframe>
 			</div>
 		</div>
