fix lord sandon link on puzzles landing page

--- a/genealogy-puzzles/index.html
+++ b/genealogy-puzzles/index.html
@@ -1,4 +1,4 @@
 <h1 id="genealogy-puzzles">Genealogy Puzzles</h1>
 <ul>
-<li><a href="who-was-robert-poppetts-guardian-on-the-lord-sandon/index.html">Who was Robert Poppett's guardian on the Lord Sandon?</a></li>
+<li><a href="lord-sandon/index.html">Who was Robert Poppett's guardian on the Lord Sandon?</a></li>
 </ul>
