--- a/index.html
+++ b/index.html
@@ -95,7 +95,17 @@
 					<div class="topbar-entry-link"><a href="/home/index.html" target="the_frame">Home</a></div>
 					<div class="topbar-entry-link"><a href="/genealogy-puzzles/index.html" target="the_frame">Genealogy Puzzles</a></div>
 					<div class="topbar-entry-link"><a href="/narratives/index.html" target="the_frame">Narratives</a></div>
-					<div class="topbar-entry-link"><a href="/trees/index.html" target="the_frame">Trees</a></div>
+					<div class="dropdown">
+						<div class="topbar-entry-link">Trees</div>
+						<div class="dropdown-content">
+							<div class="topbar-entry-link">
+								<a href="/trees/robert-poppett/index.html" target="the_frame">Robert Albert Poppett</a>
+							</div>
+							<div class="topbar-entry-link">
+								<a href="/trees/gashum-case/index.html" target="the_frame">Gashum Caleb Case</a>
+							</div>
+						</div>
+					</div>
 					<div class="topbar-entry-link"><a href="/poppett-gallery/index.html" target="the_frame">Poppett Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/case-gallery/index.html" target="the_frame">Case Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/fan/index.html" target="the_frame">Friends, Associates, Neighbors</a></div>
