update newspaper archive with new hubdoc

--- a/poppett-gallery/index.html
+++ b/poppett-gallery/index.html
@@ -11,7 +11,7 @@
 <h1 id="poppett-gallery">Poppett Gallery</h1>
 <ul>
 <li><a href="journals-and%20histories">Journals And Histories</a></li>
-<li><a href="newspaper-articles">Newspaper Articles</a></li>
+<li><a href="newspaper-archive">Newspaper Archive</a></li>
 <li><a href="personal-papers">Personal Papers</a></li>
 <li><a href="photos">Photos</a></li>
 <li><a href="poppett-properties">Poppett Properties</a></li>
