--- a/fan/alvah-downey/index.html
+++ b/fan/alvah-downey/index.html
@@ -1,1 +1,5 @@
 <h1 id="alvah-downey">Alvah Downey</h1>
+<div class="figure">
+<img src="photo.jpg" alt="photo" />
+<p class="caption">photo</p>
+</div>
