--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
 				<div class="sidebar-section" id="places">
 					<div class="sidebar-entry-title"><b>Places</b></div>
 					<div class="sidebar-dropdown">
-						<div class="sidebar-entry-link">Early Church</div>
+						<div class="sidebar-entry-link">
+							<a href="/under-construction.html" target="the_frame">Early Church</a>
+						</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">New York</div>
-							<div class="sidebar-entry-link">Ohio and Missouri</div>
-							<div class="sidebar-entry-link">Nauvoo and Death of Joseph Smith</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">New York</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Ohio and Missouri</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Nauvoo and Death of Joseph Smith</a>
+							</div>
 						</div>
 					</div>
 					<div class="sidebar-dropdown">
@@ -39,38 +47,65 @@
 							<div class="sidebar-dropdown">
 							<div class="sidebar-entry-link">British Mission</div>
 								<div class="sidebar-dropdown-content">
-									<div class="sidebar-entry-link">Branches and Missionaries</div>
-									<div class="sidebar-entry-link">Liverpool to New Orleans</div>
+									<div class="sidebar-entry-link">
+										<a href="/under-construction.html" target="the_frame">Overview</a>
+									</div>
+									<div class="sidebar-entry-link">
+										<a href="/resources/places/britain/british-mission/branches-and-missionaries/index.html" target="the_frame">Branches and Missionaries</a>
+									</div>
+									<div class="sidebar-entry-link">
+										<a href="/resources/places/britain/british-mission/liverpool-to-new-orleans/index.html" target="the_frame">Liverpool to New Orleans</a>
+									</div>
 								</div>
 							</div>
-							<div class="sidebar-entry-link">Shropshire</div>
-							<div class="sidebar-entry-link">Coal Mining</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Shropshire</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Coal Mining</a>
+							</div>
 						</div>
 					</div>
 					<div class="sidebar-dropdown">
 						<div class="sidebar-entry-link">Exodus from USA</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">Staging Areas</div>
-							<div class="sidebar-entry-link">Mormon Battalion</div>
-							<div class="sidebar-entry-link">Trek to Utah Territory</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Staging Areas</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Mormon Battalion</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Trek to Utah Territory</a>
+							</div>
 						</div>
 					</div>
 					<div class="sidebar-dropdown">
 						<div class="sidebar-entry-link">Utah Territory</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">Utah Valley</div>
-							<div class="sidebar-entry-link">Mountain Meadow Massacre</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">Utah Valley</a>
+							</div>
+							<div class="sidebar-entry-link">
+								<a href="http://www.npr.org/templates/story/story.php?storyId=94509868" target="_blank">Mountain Meadow Massacre</a>
+							</div>
 						</div>
 					</div>
-					<div class="sidebar-entry-link">California Gold Fields</div>
-					<div class="sidebar-entry-link">Desert Trail to San Bernardino</div>
+					<div class="sidebar-entry-link">
+						<a href="/under-construction.html" target="the_frame">California Gold Fields</a>
+					</div>
+					<div class="sidebar-entry-link">
+						<a href="/under-construction.html" target="the_frame">Desert Trail to San Bernardino</a>
+					</div>
 					<div class="sidebar-dropdown">
 						<div class="sidebar-entry-link">San Bernardino Colony</div>
 						<div class="sidebar-dropdown-content">
 							<div class="sidebar-entry-link">
 								<a href="/resources/places/san-bernardino-colony/overview/index.html" target="the_frame">Overview</a>
 							</div>
-							<div class="sidebar-entry-link">1853 Survey</div>
+							<div class="sidebar-entry-link">
+								<a href="/under-construction.html" target="the_frame">1853 Survey</a>
+							</div>
 							<div class="sidebar-entry-link">
 								<a href="/resources/places/san-bernardino-colony/fort-1851-1854/index.html" target="the_frame">Fort 1851-1854</a>
 							</div>
@@ -78,7 +113,6 @@
 								<a href="/resources/places/san-bernardino-colony/freighting/index.html" target="the_frame">Freighting</a>
 							</div>
 							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/pioneers/index.html" target="the_frame">Pioneers</a></div>
-							<div class="sidebar-entry-link">Recall</div>
 						</div>
 					</div>
 				</div>
