--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 				<div class="sidebar-section" id="bulletin-board">
 					<div class="sidebar-entry-title"><b>Lists</b></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/rlds-san-bernadino-1867-branch-pages-18-23.pdf" target="_blank">RLDS San Bernadino Branch List (1867)</a></div>
+					<div class="sidebar-entry-link"><a href="/resources/lists/haskell-train/index.html" target="the_frame">1854 George Haskell Co to San Bernardino</a></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/lds-clan-intermarriages/index.html" target="the_frame">LDS Clan Intermarriages</a></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/lord-sandon-passenger-list-page-with-robert-poppett/index.html" target="the_frame">Lord Sandon Passenger List Pages with Robert Poppett</a></div>
 				</div>
