rename 'dropdown'->'rollover'; fix double rollover css; remove 'early church' link

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 				<div class="sidebar-title"><b>Mormon History Resources</b></div>
 				<div class="sidebar-section" id="places">
 					<div class="sidebar-entry-title"><b>Places</b></div>
-					<div class="sidebar-dropdown">
-						<div class="sidebar-entry-link">
-							<a href="/under-construction.html" target="the_frame">Early Church</a>
-						</div>
-						<div class="sidebar-dropdown-content">
+					<div class="sidebar-rollover">
+						<div class="sidebar-entry-link">Early Church</div>
+						<div class="sidebar-rollover-content">
 							<div class="sidebar-entry-link">
 								<a href="/under-construction.html" target="the_frame">New York</a>
 							</div>
@@ -41,12 +39,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="sidebar-dropdown">
+					<div class="sidebar-rollover">
 						<div class="sidebar-entry-link">Britain</div>
-						<div class="sidebar-dropdown-content">
-							<div class="sidebar-dropdown">
+						<div class="sidebar-rollover-content">
+							<div class="sidebar-rollover">
 							<div class="sidebar-entry-link">British Mission</div>
-								<div class="sidebar-dropdown-content">
+								<div class="sidebar-rollover-content">
 									<div class="sidebar-entry-link">
 										<a href="/under-construction.html" target="the_frame">Overview</a>
 									</div>
@@ -66,9 +64,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="sidebar-dropdown">
+					<div class="sidebar-rollover">
 						<div class="sidebar-entry-link">Exodus from USA</div>
-						<div class="sidebar-dropdown-content">
+						<div class="sidebar-rollover-content">
 							<div class="sidebar-entry-link">
 								<a href="/under-construction.html" target="the_frame">Staging Areas</a>
 							</div>
@@ -80,9 +78,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="sidebar-dropdown">
+					<div class="sidebar-rollover">
 						<div class="sidebar-entry-link">Utah Territory</div>
-						<div class="sidebar-dropdown-content">
+						<div class="sidebar-rollover-content">
 							<div class="sidebar-entry-link">
 								<a href="/under-construction.html" target="the_frame">Utah Valley</a>
 							</div>
@@ -97,9 +95,9 @@
 					<div class="sidebar-entry-link">
 						<a href="/under-construction.html" target="the_frame">Desert Trail to San Bernardino</a>
 					</div>
-					<div class="sidebar-dropdown">
+					<div class="sidebar-rollover">
 						<div class="sidebar-entry-link">San Bernardino Colony</div>
-						<div class="sidebar-dropdown-content">
+						<div class="sidebar-rollover-content">
 							<div class="sidebar-entry-link">
 								<a href="/resources/places/san-bernardino-colony/overview/index.html" target="the_frame">Overview</a>
 							</div>
@@ -130,9 +128,9 @@
 					<div class="topbar-entry-link"><a href="/home/index.html" target="the_frame">Home</a></div>
 					<div class="topbar-entry-link"><a href="/genealogy-puzzles/index.html" target="the_frame">Genealogy Puzzles</a></div>
 					<div class="topbar-entry-link"><a href="/narratives/index.html" target="the_frame">Narratives</a></div>
-					<div class="dropdown">
+					<div class="rollover">
 						<div class="topbar-entry-link">Trees</div>
-						<div class="dropdown-content">
+						<div class="rollover-content">
 							<div class="topbar-entry-link">
 								<a href="/trees/robert-poppett/index.html" target="the_frame">Robert Albert Poppett</a>
 							</div>
