--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="sidebar-entry-link"><a href="/resources/timeline/index.html" target="the_frame">Timeline</a></div>
+				<div class="sidebar-entry-link"><a href="/resources/timeline/timeline.pdf" target="the_frame">Timeline</a></div>
 				<div class="sidebar-section" id="bulletin-board">
 					<div class="sidebar-entry-title"><b>Lists</b></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/rlds-san-bernadino-1867-branch-pages-18-23.pdf" target="_blank">RLDS San Bernadino Branch List (1867)</a></div>
