fix poppet-gallery index

--- a/poppett-gallery/index.html
+++ b/poppett-gallery/index.html
@@ -10,12 +10,12 @@
 <body>
 <h1 id="poppett-gallery">Poppett Gallery</h1>
 <ul>
-<li><a href="journals-and%20histories">Journals And Histories</a></li>
-<li><a href="newspaper-archive">Newspaper Archive</a></li>
-<li><a href="personal-papers">Personal Papers</a></li>
-<li><a href="photos">Photos</a></li>
-<li><a href="poppett-properties">Poppett Properties</a></li>
-<li><a href="shropshire-poppetts">Shropshire Poppetts</a></li>
+<li><a href="journals-and-histories/index.html">Journals And Histories</a></li>
+<li><a href="newspaper-archive/index.html">Newspaper Archive</a></li>
+<li><a href="personal-papers/index.html">Personal Papers</a></li>
+<li><a href="photos/index.html">Photos</a></li>
+<li><a href="poppett-properties/index.html">Poppett Properties</a></li>
+<li><a href="shropshire-poppetts/index.html">Shropshire Poppetts</a></li>
 </ul>
 </body>
 </html>
