make About link to under construction page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="topbar-entry-link"><a href="/poppett-gallery/index.html" target="the_frame">Poppett Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/case-gallery/index.html" target="the_frame">Case Gallery</a></div>
 					<div class="topbar-entry-link"><a href="/fan/index.html" target="the_frame">Friends, Associates, Neighbors</a></div>
-					<div class="topbar-entry-link"><a href="/about/index.html" target="the_frame">About</a></div>
+					<div class="topbar-entry-link"><a href="/under-construction.html" target="the_frame">About</a></div>
 				</div>
 				<iframe name="the_frame" id="the_frame" src="/home/index.html">
 				</iframe>
