--- a/poppett-gallery/index.html
+++ b/poppett-gallery/index.html
@@ -11,7 +11,8 @@
 <h1 id="poppett-gallery">Poppett Gallery</h1>
 <ul>
 <li><a href="journals-and-histories/index.html">Journals And Histories</a></li>
-<li><a href="newspaper-archive/index.html">Newspaper Archive</a></li>
+<li><a href="searchable-newspaper-archive/index.html">Searchable Newspaper Archive</a></li>
+<li><a href="newspaper-clippings/index.html">Newspaper Clippings</a></li>
 <li><a href="personal-papers/index.html">Personal Papers</a></li>
 <li><a href="photos/index.html">Photos</a></li>
 <li><a href="poppett-properties/index.html">Poppett Properties</a></li>
